--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -10,12 +10,14 @@
           </tr>
           <tr>
             <td><%= f.label :shipment_require_date %></td>
-            <td><%= f.date_field :shipment_require_date %></td>
+            <!-- <td><%#= f.date_select :shipment_require_date %></td>  (original)  -->
+            <!-- <td><%#= f.date_field :shipment_require_date %></td>   (HTML5)  -->
+            <!--<td><%#= f.text_field :shipment_require_date, data: { provide: "datepicker", 'date-format': 'yyyy-mm-dd', 'date-autoclose': 'true', 'date-today-btn': 'linked'} %></td> (without helper) -->
+            <td><%= datepicker_field(f, :shipment_require_date) %></td>
           </tr>
           <tr>
             <td><%= f.label :order_date %></td>
-            <td><%= f.date_field :order_date %></td>
-            <!-- <td><%#= f.date_select :order_date %></td> -->
+            <td><%= datepicker_field(f, :order_date) %></td>
           </tr>
           <tr>
             <td><%= f.label :ship_to %></td>
@@ -23,7 +25,7 @@
           </tr>
           <tr>
             <td><%= f.label :reference %></td>
-            <td><%= f.text_area :reference , style: "width: 300px"%></td>
+            <td><%= f.text_area :reference , style: "width: 300px" %></td>
           </tr>
         </table>
 
@@ -73,4 +75,3 @@
     </div>
   </div>
 </div>
-
