--- a/app/views/orderdetails/index.html.erb
+++ b/app/views/orderdetails/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= orderdetail.color_id %></td>
         <td><%= orderdetail.price %></td>
         <td><%= orderdetail.quantity %></td>
-        <td><%= link_to 'Show', order_orderdetails %></td>
+        <td><%= link_to 'Show', order_orderdetail %></td>
         <td><%= link_to 'Edit', edit_order_orderdetail_path(orderdetail) %></td>
         <td><%= link_to 'Destroy', order_orderdetail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
