--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -46,13 +46,13 @@
               <%= f.fields_for :orderdetails do |od| %>
                 <tr>
                   <td>
-                    <%= od.select("model_id", Model.all.collect {|m| [ m.name, m.id ]}, { include_blank:  false }) %>
+                    <%= od.select("model_id", Model.all.collect {|m| [ m.name, m.id ]}, { include_blank:  false }, class: "form-control") %>
                   </td>
                   <td>
-                    <%= od.select("size_id", Model.find_by_id(od.object.model_id).sizes.collect {|s| [ s. name, s.id ] }, { include_blank: false }) %>
+                    <%= od.select("size_id", Model.find_by_id(od.object.model_id).sizes.collect {|s| [ s. name, s.id ] }, { include_blank: false }, class: "form-control") %>
                   </td>
                   <td>
-                    <%= od.select("color_id", Model.find_by_id(od.object.model_id).colors.  collect {|c| [ c.name, c.id ] }, { include_blank: false }) %>
+                    <%= od.select("color_id", Model.find_by_id(od.object.model_id).colors.  collect {|c| [ c.name, c.id ] }, { include_blank: false }, class: "form-control") %>
                   </td>
                   <td>
                     <%= od.text_field :price, value:Model.find_by_id(od.object.model_id).price, disabled: true, style: "text-align: right", size: 10 %>
